tests/reference/asr-structs_04-7b864bc.stderr
semantic error: S() got multiple values for argument 'x'
 --> tests/errors/structs_04.py:9:18
  |
9 |     s: S = S(24, x=2)
  |                  ^^^ 
